=========================================================================
CHANGE LOG
=========================================================================

2009-01-09 Warren L. DeLano <warren@delsci.com>

	* added PyMOL> prompt to the Tk Window

	* addressed a couple of minor file saving issues
	
2009-01-05 Warren L. DeLano <warren@delsci.com>

	* removing old X11-hybrid kludge, fixed a few python issues
	
	* default .mpg extension handling for MPEG export
	
2009-01-02 Warren L. DeLano <warren@delsci.com>

	* fixed click-through toggle for Leopard

2009-12-31 Warren L. DeLano <warren@delsci.com>

	* various changes associated with getting 1.2b0 out the door
	
2008-12-23 Warren L. DeLano <warren@delsci.com>

	* fixed tk-based session save problems reported by DB
	
2008-12-16 Warren L. DeLano <warren@delsci.com>

	* fixed another object-name-dragging bug
	
	* mpeg1 export menu item

	* fixed putty scaling bugs
	
2008-12-14 Warren L. DeLano <warren@delsci.com>

	* added support for writing ppm files (awkwardly: via png)
	
2008-12-13 Warren L. DeLano <warren@delsci.com>

	* added error message for when align/super atom alignment fails
	
2008-12-07 Warren L. DeLano <warren@delsci.com>

	* fixed split_states behavior to allow prefix to override titles
	
2008-12-07 Warren L. DeLano <warren@delsci.com>

	* updated pymol/__init__.py OpenGL autoconfiguration
	
2008-12-04 Warren L. DeLano <warren@delsci.com>

	* continued major overhaul of the builder

	* fixed longstanding object name right-dragging bugs
	
2008-11-29 Warren L. DeLano <warren@delsci.com>

	* various updates to the builder
	
	* auto_overlay setting

	* stick_ball_color, stick_h_scale settings

	* added support for negative stick_radius, stick_ball_ratio
	
2008-11-22 Warren L. DeLano <warren@delsci.com>

	* fixed incompatibility with Roche Pocket Viewer
	
2008-11-12 Warren L. DeLano <warren@delsci.com>

	* added max_ups setting to govern excessive geometry flux
		